--- a/.github/workflows/opsalmaviva.html
+++ b/.github/workflows/opsalmaviva.html
@@ -149,7 +149,7 @@ label:hover {color: #3e3e3f;}
 			<td colspan="5"><!-- For Each Language, Add a New Input Option Here!
   <input type='radio' name='opts' class="invis" id='opt##' /> --><input class="invis" id="open_close" type="checkbox" /> <input checked="checked" class="invis" id="br" name="opts" type="radio" />
 			<header class="header-base logo_wrap">
-			<div class="logo_area"><img height="77" src="https://portaldocolaborador.almavivadobrasil.com.br/Resources/images/logo.png" style="width: 100%; max-width: 8em; height: auto; margin: 0px 20px 0px 20px;" width="250" /></div>
+			<div class="logo_area"><img height="77" src="https://s3.amazonaws.com/atsprd/ats/202510241630060411-logoaltoqua.png" style="width: 100%; max-width: 8em; height: auto; margin: 0px 20px 0px 20px;" width="250" /></div>
 			</header>
 
 			<main class="main-content" role="main">
